apps/xwiki/base/xwiki-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xwiki
  labels:
    app: xwiki
    tier: app
    environment: ""
spec:
  serviceName: xwiki
  replicas: 1
  selector:
    matchLabels:
      app: xwiki
      tier: app
      environment: recette
  template:
    metadata:
      labels:
        app: xwiki
        tier: app
        environment: recette
    spec:
      containers:
        - name: xwiki
          image: xwiki:17.3.0-mysql-tomcat
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: xwiki-data
              mountPath: /usr/local/xwiki/data
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 120 
            timeoutSeconds: 10
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 180
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 10
  volumeClaimTemplates:
    - metadata:
        name: xwiki-data
        labels:
          app: xwiki
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: longhorn-db
