apps/xwiki/base/xwiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xwiki
  labels:
    app: xwiki
    tier: app
    environment: recette
spec:
  selector:
    app: xwiki
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
