apps/xwiki/base/xwiki-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xwiki
  namespace: ns-open4goods-recette
  labels:
    app: xwiki
spec:
  selector:
    app: xwiki
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
