apps/xwiki/base/xwiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xwiki
  labels:
    app: xwiki
spec:
  rules: []   # les overlays vont remplir ça
